# memory

./: .claude-memory-state.json  .gitignore  .memory-project.json  API.md  CLAUDE.md  CONTRIBUTING.md  ENHANCEMENTS_SUMMARY.md  README.md  SESSION_CURATION_SOLUTION.md  SETUP.md  TESTING_CHECKLIST.md  USAGE.md  go.mod  go.sum  main.go  pyproject.toml  start_server.py  test_fixes.md  test_session_curation.py
cmd/: analyze.go  chat.go  memory.go  root.go  server.go  version.go
docs/: ONE-CLAUDE-BRIEFING.md  ONE-CLAUDE-TECHNICAL.md  architecture-doc.md  breakthroughs-doc.md  claude-code-memory-docs.md  philosophy-doc.md  sdk-limitations-and-future-tui.md  technical-choices-doc.md
examples/: simple_integration.py
integration/claude-code/: README.md  install.sh  uninstall.sh
integration/claude-code/hooks/: memory_curate.py  memory_inject.py  memory_session_start.py
integration/gemini-cli/: README.md  install.sh  uninstall.sh
integration/gemini-cli/hooks/: memory_before_agent.py  memory_pre_compress.py  memory_session_end.py  memory_session_start.py
internal/claude/: integration.go  session_integration.go
internal/memory/: client.go  conversation.go  project_state.go  session.go
python/: MEMORY_SYSTEM_2.0_SPEC.md  UNIFIED_CLI_VISION.md  main.py  requirements.txt
python/memory_engine/: __init__.py  __main__.py  api.py  api_with_curator.py  claude_curator.py  claude_curator_shell.py  config.py  core.py  core_curator_only.py  core_with_curator.py  curator.py  embeddings.py  learning.py  logging_config.py  memory.py  retrieval_strategies.py  session_primer.py  storage.py  transcript_curator.py
tests/: __init__.py  test_cli_response_extraction.py  test_json_parsing_fallback.py  test_storage_stats.py
