[project]
name = "memory"
version = "1.1.0"
description = "Consciousness continuity system - semantic memory across sessions for AI CLI tools"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.14"
authors = [
    { name = "RLabs Inc", email = "contact@rlabs.dev" }
]
keywords = ["memory", "ai", "consciousness", "llm", "cli", "claude", "gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Text embeddings and semantic understanding
    "sentence-transformers>=2.3.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.20.0",
    # Platform-specific torch versions for macOS compatibility
    "torch<2.3; sys_platform == 'darwin' and platform_machine == 'x86_64'",  # Intel Mac: torch 2.3+ drops x86_64 support
    "torch>=2.0; sys_platform == 'darwin' and platform_machine == 'arm64'",  # Apple Silicon: latest version
    "torch>=2.0; sys_platform != 'darwin'",  # Non-macOS: latest version
    
    # Vector storage and similarity search
    "chromadb>=0.4.24",
    "faiss-cpu>=1.7.4,<1.8.0",  # faiss 1.13+ requires macOS 14; keep <=1.7.x for older macOS
    
    # Data processing
    "numpy>=1.24.0,<2.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",  # Intel Mac: torch 2.2 requires numpy 1.x
    "numpy>=1.24.0; sys_platform == 'darwin' and platform_machine == 'arm64'",  # Apple Silicon: latest numpy
    "numpy>=1.24.0; sys_platform != 'darwin'",  # Non-macOS: latest numpy
    "pandas>=2.0.0",
    
    # API Server
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    
    # Claude Agent SDK for transcript curation
    "claude-agent-sdk>=0.1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# Apple Silicon optimization (ARM64 only)
mlx = [
    "mlx>=0.25.0; platform_machine == 'arm64'",
    "mlx-lm>=0.24.1; platform_machine == 'arm64'",
]

[project.urls]
Homepage = "https://github.com/RLabs-Inc/memory"
Documentation = "https://github.com/RLabs-Inc/memory#readme"
Repository = "https://github.com/RLabs-Inc/memory"
Issues = "https://github.com/RLabs-Inc/memory/issues"

[project.scripts]
memory-server = "memory_engine.api:run_server"

[tool.uv]
python-preference = "managed"
# Constrain Python and deps for Intel Macs on older macOS due to wheel compatibility
constraint-dependencies = [
    # onnxruntime requires macOS 13+ for Python 3.12+ wheels; use 3.10 on older macOS
    "python<3.11; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    # onnxruntime 1.17+ dropped macOS 10/11 support; pin to 1.16.3 for older macOS Intel
    "onnxruntime==1.16.3; sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/memory_engine"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long - we handle this with line-length

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
